Reduce spacing a touch, fix icon spacing

--- a/src/main/scss/components/_command-palette.scss
+++ b/src/main/scss/components/_command-palette.scss
@@ -134,7 +134,7 @@ $command-palette-background: color-mix(
     &__heading {
       font-size: var(--font-size-sm);
       margin: 0;
-      padding: 0.5rem 0.625rem;
+      padding: 0.375rem 0.625rem;
       color: var(--text-color-secondary);
 
       &:not(:first-of-type) {
@@ -177,7 +177,7 @@ $command-palette-background: color-mix(
         justify-content: center;
         width: 1.375rem;
         height: 1.375rem;
-        margin-right: 0.75rem;
+        margin-right: 0.625rem;
         overflow: hidden;
         pointer-events: none;
         color: var(--text-color);
